--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "@carbon/icons-react": "^11.55.0",
+    "axios": "^1.7.9",
     "framer-motion": "^12.4.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
